--- a/express-web-app/views/home.hbs
+++ b/express-web-app/views/home.hbs
@@ -5,12 +5,9 @@
 		<title>{{titlePage}}</title>
 	</head>
 	<body>
-		<header>
-			<h1>{{contentHeader}}</h1>
-		</header>
+		{{> header}}
+		<p>{{screamIt welcomeMessage}}</p>
 		<p>{{contentBody}}</p>
-		<footer>
-			<p>Copyright {{currentYear}}</p>
-		</footer>
+		{{> footer}}
 	</body>
 </html>
