--- a/express-web-app/views/partials/header.hbs
+++ b/express-web-app/views/partials/header.hbs
@@ -1,3 +1,7 @@
 <header>
 	<h1>{{contentHeader}}</h1>
+	<a href='/'>Home</a>
+	<a href='/about'>About</a>
+	<a href='/projects'>Projects</a>
+	<a href='/help.html'>Help</a>
 </header>
